Fixing background image zoom-in on smaller devices

--- a/sass/main.css
+++ b/sass/main.css
@@ -149,6 +149,15 @@ ion-icon {
 }
 
 @media all and (max-width: 985px) {
+  body {
+    background: url(../images/bg6-mobile.jpg) no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    font-family: 'Kodchasan', sans-serif;
+    color: white;
+  }
   .container-fluid {
     padding-right: 0;
     padding-left: 0;
